# python_parser

./: .gitignore  Output.json  TODO.md  hierarchy_test.py  main.py  pyproject.toml  sample_file.py
id_generation/: id_generation_strategies.py
logger/: decorators.py  logging_config.py
model_builders/: base_model_builder.py  builder_factory.py  class_model_builder.py  function_model_builder.py  module_model_builder.py  standalone_block_model_builder.py  standalone_code_block_model_builder.py
models/: enums.py  models.py
parsers/: python_parser.py
utilities/: comment_extractor.py  processing_context.py
visitor_manager/: visitor_manager.py
visitors/: base_code_block_visitor.py  class_def_visitor.py  function_def_visitor.py  module_visitor.py  standalone_code_block_strategy.py  visitor_manager.py
visitors/node_processing/: class_def_functions.py  common_functions.py  function_def_functions.py  gather_dependencies.py  module_functions.py  processing_context.py  standalone_code_block_functions.py
